# AsioNetMiddleware

AsioNet/: CMakeLists.txt  cluster_config.json  proxy_config.json
AsioNet/AsioNet/: JsonUtils.hpp  LogUtils.hpp  NetUtils.hpp  async_job.cpp  async_job.h  basic_async_session.cpp  basic_async_session.h  buffer_read.hpp  client_session_logic.cpp  client_session_logic.h  default_session_logic.cpp  default_session_logic.h  error_code.hpp  proto_mask.hpp  protocol.hpp  proxy_manager.cpp  proxy_manager.h  rc4.hpp  reusabel_buffer.hpp  server_session_logic.cpp  server_session_logic.h  session_logic.h
AsioNet/AsioNet/WLog/: LogDefine.h  WLog.cpp  WLog.h
AsioNet/AsioNet/parallel_core/: CacheLineFriendly.cpp  CacheLineFriendly.h  ObjectPool.h  ParallelUtils.cpp  ParallelUtils.h  RingBuffer.h  SafeHashMap.hpp  SafeRandom.hpp  SafeSingleton.h  Spinlock.hpp  ThreadCacheContainer.h  ThreadLifecircleEvents.h  ThreadLifecircleListener.cpp  ThreadLifecircleListener.h  (+3 more)
AsioNet/TestClient/: CMakeLists.txt  ClientMain.cpp  active_server_session_logic.cpp  active_server_session_logic.h  active_server_session_mgr.cpp  active_server_session_mgr.h  inner_pair_session.cpp  inner_pair_session.h  inner_session_logic.cpp  inner_session_logic.h
AsioNet/TestServer/: CMakeLists.txt  ServerMain.cpp
AsioNet/UnitTest/: CMakeLists.txt  TestRandom.h  UTmain.cpp  UnitTestInterface.h
CsNetwork/: BlockMalloc.cs  NetworkManager.cs  NetworkModelReflection.cs  NumberExtension.cs  RC4Compress.cs  RingBuffer.cs  SocketClient.cs  SpinLock.cs  TestNetwork.cs
CsNetwork/Serialization/: BinaryFormatter.cs
(+3 files in other folders)
